kotlin-parser/src/test/semlang/validatorTests/fail/comments1.sem
function myStuff.myFunction(): Integer {
  let myVar: Integer = Integer."2"
  return myVar
}
// Test a block comment at the end with no termination
/*